@@ -1,5 +1,13 @@
 2004-05-25  Daniel Elstner  <daniel.elstner@gmx.net>
 
+	* src/translation.cc (compose_impl): Print a warning message to
+	the console if the format string contains an invalid substitution,
+	rather than just silently ignoring the error.  This is mainly of
+	importance to translators, as it provides them some feedback if
+	they get it wrong.
+
+2004-05-25  Daniel Elstner  <daniel.elstner@gmx.net>
+
 	* src/filetree.cc (regexxer_create_file_tree): Move to anonymous
 	namespace.  Not that it matters much, but I like it this way.
 	* src/statusline.cc (regexxer_create_status_line): ditto.
